@@ -40,6 +40,7 @@ import nu.ndw.nls.routingmapmatcher.graphhopper.model.MatchedQueryResult;
 import nu.ndw.nls.routingmapmatcher.graphhopper.util.BearingCalculator;
 import nu.ndw.nls.routingmapmatcher.graphhopper.util.FractionAndDistanceCalculator;
 import nu.ndw.nls.routingmapmatcher.graphhopper.util.PathUtil;
+import nu.ndw.nls.routingmapmatcher.graphhopper.util.CrsTransformer;
 import org.geotools.referencing.GeodeticCalculator;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.Geometry;
@@ -66,13 +67,12 @@ public class GraphHopperSinglePointMapMatcher implements SinglePointMapMatcher {
     private static final int NUM_POINTS = 100;
     private static final int MAX_RELIABILITY_SCORE = 100;
 
-    private static final double DEGREE_LATITUDE_IN_KM = 111320D;
     private static final int ALL_NODES = 3;
     private static final boolean INCLUDE_ELEVATION = false;
-    private static final int EARTH_CIRCUMFERENCE = 40_075_000;
-    private static final int CIRCLE_DEGREES = 360;
     private static final GeometryFactory WGS84_GEOMETRY_FACTORY = new GeometryFactory(new PrecisionModel(),
             GlobalConstants.WGS84_SRID);
+    private static final GeometryFactory RD_NEW_GEOMETRY_FACTORY = new GeometryFactory(new PrecisionModel(),
+            GlobalConstants.RD_NEW_SRID);
 
     private final LinkFlagEncoder flagEncoder;
     private final LocationIndexTree locationIndexTree;
@@ -83,6 +83,7 @@ public class GraphHopperSinglePointMapMatcher implements SinglePointMapMatcher {
     private final IsochroneService isochroneService;
     private final DistanceCalc distanceCalculator;
     private final PointMatchingService pointMatchingService;
+    private final CrsTransformer crsTransformer;
 
     public GraphHopperSinglePointMapMatcher(final NetworkGraphHopper network) {
         Preconditions.checkNotNull(network);
@@ -98,10 +99,10 @@ public class GraphHopperSinglePointMapMatcher implements SinglePointMapMatcher {
         final Weighting weighting = new ShortestWeighting(flagEncoder);
         this.isochroneService = new IsochroneService(flagEncoder, weighting);
         this.distanceCalculator = new DistanceCalcEarth();
-        this.pointMatchingService = new PointMatchingService(
-                WGS84_GEOMETRY_FACTORY,
+        this.pointMatchingService = new PointMatchingService(WGS84_GEOMETRY_FACTORY,
                 new BearingCalculator(new GeodeticCalculator()),
                 new FractionAndDistanceCalculator(new GeodeticCalculator()));
+        this.crsTransformer = new CrsTransformer();
     }
 
     @Override
@@ -130,7 +131,7 @@ public class GraphHopperSinglePointMapMatcher implements SinglePointMapMatcher {
                 : DEFAULT_CANDIDATE_DISTANCE_IN_METERS;
         final BearingRange bearingRange = singlePointLocationWithBearing.getBearingRange();
         final List<QueryResult> result = findCandidates(inputPoint, inputRadius);
-        final Polygon circle = createCircle(inputPoint, inputRadius);
+        final Polygon circle = createCircle(inputPoint, 2 * inputRadius);
         // Crop geometry to only include segments in search radius
         final List<MatchedPoint> filteredResults = result.stream()
                 // filter on intersects
@@ -163,7 +164,7 @@ public class GraphHopperSinglePointMapMatcher implements SinglePointMapMatcher {
                 })
                 .flatMap(Collection::stream)
                 .sorted(comparing(MatchedPoint::getDistanceToSnappedPoint))
-                .collect(Collectors.toList());
+                .toList();
         if (filteredResults.isEmpty()) {
             return createFailedMatch(singlePointLocationWithBearing);
         }
@@ -193,14 +194,15 @@ public class GraphHopperSinglePointMapMatcher implements SinglePointMapMatcher {
         return circle.intersects(pl.toLineString(INCLUDE_ELEVATION));
     }
 
-    private Polygon createCircle(final Point point, final double distanceInMeters) {
-        final var shapeFactory = new GeometricShapeFactory(WGS84_GEOMETRY_FACTORY);
-        shapeFactory.setCentre(new Coordinate(point.getX(), point.getY()));
+    private Polygon createCircle(final Point pointWgs84, final double diameterInMeters) {
+        final var shapeFactory = new GeometricShapeFactory(RD_NEW_GEOMETRY_FACTORY);
+        final Point pointRd = (Point) crsTransformer.transformFromWgs84ToRdNew(pointWgs84);
+        shapeFactory.setCentre(new Coordinate(pointRd.getX(), pointRd.getY()));
         shapeFactory.setNumPoints(NUM_POINTS);
-        shapeFactory.setWidth(distanceInMeters / DEGREE_LATITUDE_IN_KM);
-        shapeFactory.setHeight(
-                distanceInMeters / (EARTH_CIRCUMFERENCE * Math.cos(Math.toRadians(point.getX())) / CIRCLE_DEGREES));
-        return shapeFactory.createEllipse();
+        shapeFactory.setWidth(diameterInMeters);
+        shapeFactory.setHeight(diameterInMeters);
+        final Polygon ellipseRd = shapeFactory.createEllipse();
+        return (Polygon) crsTransformer.transformFromRdNewToWgs84(ellipseRd);
     }
 
     private List<QueryResult> findCandidates(final Point point, final double radius) {
